fix: wishlist icon alignment and count fix

--- a/assets/base.css
+++ b/assets/base.css
@@ -2110,7 +2110,7 @@ input[type='checkbox'] {
   justify-content: center;
   align-items: center;
   font-size: 0.9rem;
-  bottom: -0.3rem;
+  bottom: -0.4rem;
   left: 0.9rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
